--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -89,7 +89,8 @@
   border: none;
   padding: 6px 22px;
   border-radius: 4px;
-  transition: var(--hover-anim);
+  transition: background-color var(--hover-anim), color var(--hover-anim),
+    box-shadow var(--hover-anim);
   outline: transparent;
 
   &:hover,
