--- a/scss/components/_social.scss
+++ b/scss/components/_social.scss
@@ -19,7 +19,7 @@
     fill: var(--main-bg-cl);
   }
 }
-.social-link {
+.footer__social-logo {
   align-items: center;
   justify-content: center;
   display: flex;
