--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,4 +1,4 @@
-.active-btn {
+.hero__btn {
   padding: 10px 32px;
   display: block;
   background: var(--accent-color);
@@ -9,7 +9,7 @@
   margin-right: auto;
 }
 
-.btn {
+.btn--style {
   font-family: var(--main-font);
   font-weight: 700;
   font-size: 16px;
@@ -77,7 +77,7 @@
     fill: var(--accent-color);
   }
 }
-.btn-page-two {
+.catalog__btn {
   font-family: var(--main-font);
   font-weight: 500;
   font-size: 16px;
@@ -101,14 +101,15 @@
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
 }
-.item-btn {
+.catalog__link {
   margin-right: 8px;
 
   &:last-child {
     margin-right: 0;
   }
 }
-.footer-btn {
+
+.footer__btn {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
