--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -1,11 +1,11 @@
-.logo {
-    font-family: var(--sekondary-font);
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    color: var(--accent-color);
-    text-decoration: none;
-    letter-spacing: 0.03em;
-    margin-right: 93px;
+.logo--blue {
+  font-family: var(--sekondary-font);
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
+  text-decoration: none;
+  letter-spacing: 0.03em;
+  margin-right: 93px;
 }
