--- a/css/main.css
+++ b/css/main.css
@@ -61,17 +61,40 @@ img {
 }
 
 .container {
-  outline: 1px solid none;
-  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .list {
@@ -577,21 +600,44 @@ img {
 }
 
 .hero {
-  max-width: 1600px;
-  height: 600px;
-  background-repeat: no-repeat;
-  background-position: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
   background-color: var(--accent-bg-color);
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../img/bg/hero-bg.jpg);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/bg/hero-bg.jpg);
   background-size: cover;
   margin-left: auto;
   margin-right: auto;
+  background-repeat: no-repeat;
+  background-position: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (max-width: 767.98px) {
+  .hero {
+    max-width: 480px;
+    height: 400px;
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .hero {
+    max-width: 768px;
+    height: 400px;
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+    height: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .hero__title {
@@ -599,16 +645,30 @@ img {
   font-family: var(--main-font);
   font-style: normal;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  width: 696px;
-  height: 120px;
   text-align: center;
   margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media screen and (max-width: 1199.98px) {
+  .hero__title {
+    width: 360px;
+    height: 84px;
+    font-size: 26px;
+    line-height: 1.62;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    width: 696px;
+    height: 120px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .benefits__text {
@@ -632,11 +692,28 @@ img {
   margin-bottom: 10px;
 }
 
-.benefits__list {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (max-width: 767.98px) {
+  .benefits__title {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .benefits__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .benefits__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .benefits__advantages {
@@ -655,51 +732,96 @@ img {
           justify-content: center;
 }
 
-.benefits__item {
-  width: 270px;
-  margin-right: 30px;
+@media screen and (max-width: 767.98px) {
+  .benefits__advantages {
+    width: 450px;
+  }
 }
 
-.benefits__item:last-child {
-  margin-right: 0;
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .benefits__advantages {
+    width: 354px;
+  }
+}
+
+.benefits__item {
+  display: block;
+  height: 251px;
+}
+
+@media screen and (max-width: 767.98px) {
+  .benefits__item:not(:last-child) {
+    margin-bottom: 30px;
+    height: 226px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .benefits__item {
+    width: 354px;
+  }
+  .benefits__item:nth-child(-n + 2) {
+    margin-bottom: 30px;
+  }
+  .benefits__item:nth-child(2n + 1) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .benefits__item {
+    width: 270px;
+  }
+  .benefits__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .about__title {
   font-family: var(--main-font);
   font-style: normal;
   font-weight: 700;
-  font-size: 36px;
   line-height: 1.17;
   color: var(--secondary-text-cl);
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
   text-align: center;
 }
 
+@media screen and (max-width: 1199.98px) {
+  .about__title {
+    font-size: 28px;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .about__title {
+    font-size: 36px;
+    margin-bottom: 50px;
+  }
+}
+
+/* 
 .our-team__list {
   list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
 .our-team__item {
   margin-right: 30px;
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: var(--our-team-color);
-}
 
-.our-team__item:last-child {
-  margin-right: 0;
+  &:last-child {
+    margin-right: 0;
+  }
 }
-
 .our-team__wraper {
   padding-bottom: 30px;
   padding-top: 30px;
 }
-
 .our-team__item .name {
   margin-bottom: 10px;
 }
@@ -707,27 +829,20 @@ img {
 .about {
   padding-top: 0;
 }
-
 .about__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .about__item {
   position: relative;
   margin-right: 30px;
-}
-
-.about__item:last-child {
-  margin-right: 0;
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 .about__text {
   position: absolute;
   content: '';
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%;
   height: 70px;
@@ -739,14 +854,9 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-bg-cl);
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
-
 .our-team__name {
   font-family: var(--main-font);
   font-style: normal;
@@ -758,11 +868,9 @@ img {
   letter-spacing: 0.03em;
   margin-bottom: 10px;
 }
-
 .section-team {
   background-color: var(--section-team-color);
 }
-
 .our-team__position {
   font-family: var(--main-font);
   font-style: normal;
@@ -773,14 +881,9 @@ img {
   letter-spacing: 0.03em;
   margin-bottom: 16px;
 }
-
 .our-team__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 .our-team__link:not(:last-child) {
@@ -788,24 +891,53 @@ img {
 }
 
 .our-team__icon {
-  -webkit-transition: var(--hover-anim);
   transition: var(--hover-anim);
   fill: var(--clients-color);
 }
-
+*/
 .clients__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
-.clients__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (max-width: 767.98px) {
+  .clients__item {
+    width: 210px;
+  }
+  .clients__item:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+  .clients__item:nth-child(-n + 4) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients__item {
+    width: 226px;
+  }
+  .clients__item:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
+  .clients__item:nth-child(3n) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    width: 170px;
+  }
+  .clients__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .client__name {
   color: var(--clients-color);
-  width: 170px;
   height: 92px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -832,10 +964,15 @@ img {
   fill: var(--accent-color);
 }
 
-.clients__icon {
+.client__name .clients__icon {
   -webkit-transition: var(--hover-anim);
   transition: var(--hover-anim);
   fill: currentColor;
+}
+
+.catalog {
+  width: 1200px;
+  height: 1360px;
 }
 
 .catalog__list {
@@ -849,8 +986,6 @@ img {
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 50px;
-  /* width: 1200px;
-  height: 1360px; */
 }
 
 .catalog__img-list {
