--- a/scss/loyauts/_main-page-1.scss
+++ b/scss/loyauts/_main-page-1.scss
@@ -1,17 +1,34 @@
 .hero {
-  max-width: 1600px;
-  height: 600px;
-  background-repeat: no-repeat;
-  background-position: center;
-  align-items: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
   background-color: var(--accent-bg-color);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../img/bg/hero-bg.jpg);
   background-size: cover;
   margin-left: auto;
   margin-right: auto;
+  background-repeat: no-repeat;
+  background-position: center;
+  align-items: center;
+
+  @include mq(mobile-only) {
+    max-width: 480px;
+    height: 400px;
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+
+  @include mq(tablet-only) {
+    max-width: 768px;
+    height: 400px;
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+
+  @include mq(desktop) {
+    max-width: 1600px;
+    height: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .hero__title {
@@ -19,18 +36,26 @@
   font-family: var(--main-font);
   font-style: normal;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  width: 696px;
-  height: 120px;
   text-align: center;
   margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
-}
 
+  @include mq(not-desktop) {
+    width: 360px;
+    height: 84px;
+    font-size: 26px;
+    line-height: 1.62;
+  }
+  @include mq(desktop) {
+    width: 696px;
+    height: 120px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
 .benefits__text {
   font-family: var(--main-font);
   font-style: normal;
@@ -39,6 +64,7 @@
   color: var(--main-text-cl);
   letter-spacing: 0.03em;
 }
+
 .benefits__title {
   font-family: var(--main-font);
   font-style: normal;
@@ -49,11 +75,22 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 10px;
+
+  @include mq(mobile-only) {
+    text-align: center;
+  }
 }
+
 .benefits__list {
-  list-style: none;
-  display: flex;
+  @include mq(tablet) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @include mq(desktop) {
+    display: flex;
+  }
 }
+
 .benefits__advantages {
   width: 270px;
   height: 120px;
@@ -62,13 +99,38 @@
   align-items: center;
   display: flex;
   justify-content: center;
+
+  @include mq(mobile-only) {
+    width: 450px;
+  }
+  @include mq(tablet-only) {
+    width: 354px;
+  }
 }
 
 .benefits__item {
-  width: 270px;
-  margin-right: 30px;
-  &:last-child {
-    margin-right: 0;
+  display: block;
+  height: 251px;
+  @include mq(mobile-only) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+      height: 226px;
+    }
+  }
+  @include mq(tablet-only) {
+    width: 354px;
+    &:nth-child(-n + 2) {
+      margin-bottom: 30px;
+    }
+    &:nth-child(2n + 1) {
+      margin-right: 30px;
+    }
+  }
+  @include mq(desktop) {
+    width: 270px;
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
   }
 }
 
@@ -76,13 +138,21 @@
   font-family: var(--main-font);
   font-style: normal;
   font-weight: 700;
-  font-size: 36px;
   line-height: 1.17;
   color: var(--secondary-text-cl);
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
+
   text-align: center;
-}
+
+  @include mq(not-desktop) {
+    font-size: 28px;
+    margin-bottom: 30px;
+  }
+  @include mq(desktop) {
+    font-size: 36px;
+    margin-bottom: 50px;
+  }
+} /* 
 .our-team__list {
   list-style: none;
   display: flex;
@@ -175,17 +245,41 @@
   transition: var(--hover-anim);
   fill: var(--clients-color);
 }
-
+*/
 .clients__list {
   display: flex;
+  flex-wrap: wrap;
 }
-.clients__item:not(:last-child) {
-  margin-right: 30px;
-}
+.clients__item {
+  @include mq(mobile-only) {
+    width: 210px;
+    &:not(:nth-child(2n)) {
+      margin-right: 30px;
+    }
+    &:nth-child(-n + 4) {
+      margin-bottom: 30px;
+    }
+  }
 
+  @include mq(tablet) {
+    width: 226px;
+    &:not(:nth-child(3n)) {
+      margin-right: 30px;
+    }
+    &:nth-child(3n) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @include mq(desktop) {
+    width: 170px;
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+}
 .client__name {
   color: var(--clients-color);
-  width: 170px;
   height: 92px;
   display: flex;
   align-items: center;
@@ -203,8 +297,8 @@
   &:focus .clients__icon {
     fill: var(--accent-color);
   }
-}
-.clients__icon {
-  transition: var(--hover-anim);
-  fill: currentColor;
+  .clients__icon {
+    transition: var(--hover-anim);
+    fill: currentColor;
+  }
 }
