--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -93,12 +93,20 @@
     box-shadow var(--hover-anim);
   outline: transparent;
 
-  &:hover,
-  &:focus {
-    color: var(--main-bg-cl);
-    background-color: var(--accent-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
+  @include mq(mobile-only) {
+    &:nth-child(-n + 4) {
+      margin-bottom: 15px;
+    }
+  }
+
+  @include mq(desktop) {
+    &:hover,
+    &:focus {
+      color: var(--main-bg-cl);
+      background-color: var(--accent-color);
+      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
   }
 }
 .catalog__link {
@@ -124,4 +132,9 @@
   cursor: pointer;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+
+  @include mq(not-desktop) {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
