--- a/scss/loyauts/_footer.scss
+++ b/scss/loyauts/_footer.scss
@@ -1,7 +1,24 @@
+.footer {
+  background-color: var(--accent-bg-color);
+}
+.footer__adress {
+  @include mq(tablet-only) {
+    margin-left: 26px;
+  }
+}
 .footer__list {
-  list-style: none;
   font-style: normal;
   margin-top: 20px;
+
+  @include mq(tablet-only) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @include mq(not-desktop) {
+    margin-bottom: 60px;
+  }
 }
 
 .footer__item {
@@ -35,19 +52,18 @@
   }
 }
 
-.footer {
-  background-color: var(--accent-bg-color);
-}
 .footer__logo-white {
   color: var(--main-bg-cl);
 }
-.footer {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
 
 .footer__link {
-  margin-bottom: 9px;
+  @include mq(not-desktop) {
+    margin-bottom: 8px;
+  }
+
+  @include mq(desktop) {
+    margin-bottom: 9px;
+  }
 
   &:last-child {
     margin-bottom: 0;
@@ -55,7 +71,12 @@
 }
 
 .footer__social {
-  margin-right: auto;
+  @include mq(tablet-only) {
+    margin-right: 89px;
+  }
+  @include mq(desktop) {
+    margin-right: auto;
+  }
 }
 .footer__text {
   color: var(--main-bg-cl);
@@ -66,17 +87,40 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 20px;
+
+  @include mq(not-desktop) {
+    text-align: center;
+  }
 }
+
 .footer__contacts {
-  margin-right: 70px;
+  @include mq(mobile-only) {
+    text-align: center;
+  }
+
+  @include mq(tablet-only) {
+  }
+  @include mq(desktop) {
+    margin-right: 70px;
+  }
 }
+
 .footer__section {
-  display: flex;
-  align-items: baseline;
+  @include mq(desktop) {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 60px 15px;
+  }
 }
 
 .footer__social-list {
   display: flex;
+
+  @include mq(mobile-only) {
+    justify-content: center;
+    margin-bottom: 60px;
+  }
 }
 .footer__social-link:not(:last-child) {
   margin-right: 10px;
@@ -98,12 +142,40 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   padding-left: 16px;
+
+  @include mq(mobile-only) {
+    width: 100%;
+  }
+  @include mq(tablet-only) {
+    width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  @include mq(not-desktop) {
+    margin-bottom: 20px;
+  }
 }
 
 .footer__form {
   display: flex;
+
+  @include mq(not-desktop) {
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 .footer__icon-send {
   margin-left: 10px;
   fill: currentColor;
+}
+.footer__adress-social {
+  @include mq(tablet-only) {
+    display: flex;
+    justify-content: space-between;
+  }
+  @include mq(desktop) {
+    display: flex;
+  }
 }
