--- a/scss/loyauts/_main-page-1.scss
+++ b/scss/loyauts/_main-page-1.scss
@@ -56,6 +56,14 @@
     line-height: 1.36;
   }
 }
+.section__benefits {
+  @include mq(not-desktop) {
+    padding-top: 60px;
+  }
+  @include mq(desktop) {
+    padding-top: 94px;
+  }
+}
 .benefits__text {
   font-family: var(--main-font);
   font-style: normal;
@@ -141,7 +149,7 @@
   line-height: 1.17;
   color: var(--secondary-text-cl);
   letter-spacing: 0.03em;
-
+  margin-top: 94px;
   text-align: center;
 
   @include mq(not-desktop) {
@@ -152,21 +160,40 @@
     font-size: 36px;
     margin-bottom: 50px;
   }
-} /* 
-.our-team__list {
-  list-style: none;
-  display: flex;
 }
-
+.our-team__list {
+  @include mq(tablet-only) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @include mq(desktop) {
+    display: flex;
+  }
+}
 .our-team__item {
-  margin-right: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: var(--our-team-color);
 
-  &:last-child {
-    margin-right: 0;
+  @include mq(mobile-only) {
+    width: 100%;
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+  @include mq(tablet-only) {
+    &:nth-child(2n + 1) {
+      margin-right: 30px;
+    }
+    &:nth-child(-n + 2) {
+      margin-bottom: 30px;
+    }
+  }
+  @include mq(desktop) {
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
   }
 }
 .our-team__wraper {
@@ -178,7 +205,12 @@
 }
 
 .about {
-  padding-top: 0;
+  @include mq(mobile-only) {
+    display: none;
+  }
+  @include mq(tablet-only) {
+    display: none;
+  }
 }
 .about__list {
   display: flex;
@@ -232,7 +264,7 @@
   letter-spacing: 0.03em;
   margin-bottom: 16px;
 }
-.our-team__list {
+.our-team__social-list {
   display: flex;
   justify-content: center;
 }
@@ -245,7 +277,16 @@
   transition: var(--hover-anim);
   fill: var(--clients-color);
 }
-*/
+
+.clients {
+  @include mq(desktop) {
+    padding-bottom: 94px;
+  }
+  @include mq(not-desktop) {
+    padding-bottom: 60px;
+  }
+}
+
 .clients__list {
   display: flex;
   flex-wrap: wrap;
