--- a/scss/loyauts/_main-page-2.scss
+++ b/scss/loyauts/_main-page-2.scss
@@ -1,19 +1,29 @@
-.catalog {
-  width: 1200px;
-  height: 1360px;
-}
 .catalog__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+
+  @include mq(mobile-only) {
+    margin-bottom: 40px;
+    flex-wrap: wrap;
+  }
+
+  @include mq(tablet-only) {
+    margin-bottom: 30px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  @include mq(desktop) {
+    margin-bottom: 50px;
+    justify-content: center;
+  }
 }
 
 .catalog__img-list {
   display: flex;
   flex-wrap: wrap;
+
+  @include mq(mobile-only) {
+  }
 }
 .catalog__img-list h2 {
   font-family: var(--main-font);
@@ -33,24 +43,60 @@
   letter-spacing: 0.03em;
 }
 .catalog__img-link {
-  margin-right: 30px;
-  margin-bottom: 30px;
-
-  &:nth-child(3n) {
-    margin-right: 0;
+  @include mq(mobile-only) {
+    width: 450px;
+    height: 404px;
+    margin-left: auto;
+    margin-right: auto;
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
-  &:nth-child(n + 7) {
-    margin-bottom: 0;
+
+  @include mq(tablet-only) {
+    display: flex;
+    flex-wrap: wrap;
+    width: 354px;
+    height: 440px;
+    &:nth-child(2n + 1) {
+      margin-right: 30px;
+    }
+  }
+  @include mq(desktop) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    width: 370px;
+
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
+    &:nth-child(n + 7) {
+      margin-bottom: 0;
+    }
   }
 }
 
 .catalog__description {
-  padding: 63px 24px;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
   background-color: var(--color-description);
   color: var(--main-bg-cl);
+  width: 100%;
+
+  @include mq(mobile-only) {
+    padding: 77px 24px;
+  }
+
+  @include mq(tablet-only) {
+    padding: 49px 24px 77px 24px;
+  }
+
+  @include mq(desktop) {
+    padding: 63px 24px;
+  }
 }
 .catalog__card-one {
   position: relative;
